@@ -1,3 +1,10 @@
+2015-01-27  Eric Abrahamsen  <eric@ericabrahamsen.net>
+
+	* nnmairix.el ("nnmairix"): Declare nnmairix as virtual.
+
+	* gnus-bcklg.el (gnus-backlog-enter-article): No virtual groups should
+	be added to the backlog.
+
 2015-01-26  Tassilo Horn  <tsdh@gnu.org>
 
 	* Makefile.in (all total, warn, fail-on-warning): Call gnus-load.el
